--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "https://image-compare.hcti.io",
   "name": "api-testing",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
@@ -10,8 +11,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "deepai": "^1.0.21",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "http-proxy-middleware": "^2.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
