--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "browserify-fs": "^1.0.0",
     "deepai": "^1.0.21",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "http-proxy-middleware": "^2.0.6",
+    "list-react-files": "^0.2.0",
+    "path": "^0.12.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
