--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "http-proxy-middleware": "^2.0.6",
+    "image-to-base64": "^2.2.0",
     "list-react-files": "^0.2.0",
     "path": "^0.12.7",
     "react": "17.0.2",
